Fixed Boothmaps whitespace

--- a/boothmaps/styles.css
+++ b/boothmaps/styles.css
@@ -118,3 +118,7 @@ img {
   padding: 30px;
   display: inline-block;
 }
+
+#scrollableMapContainer{
+  background-color: white;
+}
